--- a/pages/home/index.html
+++ b/pages/home/index.html
@@ -73,6 +73,6 @@
     <footer id="rodape">
         
     </footer>
-    <script src="./../../script.js"></script>
+    <script type="module" src="./../../script.js"></script>
 </body>
 </html>
