--- a/pages/acessorios/pc/index.html
+++ b/pages/acessorios/pc/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tecnoshop - Acessórios</title>
-    <link rel="stylesheet" href="../../assets/css/style.css">
+    <title>Tecnoshop - Acessórios / PC</title>
+    <link rel="stylesheet" href="../../../assets/css/style.css">
 </head>
 <body class="dark">
     <header>
-        <a href="index.html">
+        <a href="../../home/index.html">
           <h1 id="header-title">
             <span class="purple" id="primeiro">Tec</span>
             <span class="line-light" id="segundo">No</span>
@@ -32,54 +32,51 @@
     <nav>
         <ul class="menu">
             <li id="menu-inicio">
-                <a href="#">Início</a>
+                <a href="../../home/index.html">Início</a>
             </li>
             <li>
-                <a href="../produtos/index.html">Produtos</a>
+                <a href="../../produtos/index.html">Produtos</a>
                 <ul class="submenu">
                     <li class="submenu-item">
-                        <a href="#">Mousepads</a>
+                        <a href="../../produtos/mousepads/index.html">Mousepads</a>
                     </li>
                     <li class="submenu-item">
-                        <a href="#">Teclados</a>
+                        <a href="../../produtos/teclados/index.html">Teclados</a>
                     </li>
                     <li class="submenu-item">
-                        <a href="#">Mouses</a>
-                    </li>
-                    <li class="submenu-item">
-                        <a href="#">Fones</a>
+                        <a href="../../produtos/mouses/index.html">Mouses</a>
                     </li>
                 </ul>
             </li>
             <li>
-                <a href="index.html">Acessórios</a>
+                <a href="../index.html">Acessórios</a>
                 <ul class="submenu">
                     <li class="submenu-item">
-                        <a href="#">PC</a>
+                        <a href="index.html">PC</a>
                     </li>
                     <li class="submenu-item">
-                        <a href="#">Console</a>
+                        <a href="../console/index.html">Console</a>
                     </li>
                     <li class="submenu-item">
-                        <a href="#">Mobile</a>
+                        <a href="../mobile/index.html">Mobile</a>
                     </li>
                 </ul>
 
             </li>
             <li>
-                <a href="../videos/index.html">Vídeos</a>
+                <a href="../../videos/index.html">Vídeos</a>
             </li>
             <li>
-                <a href="../contato/index.html">Contato</a>
+                <a href="../../contato/index.html">Contato</a>
             </li>
         </ul>
     </nav>
     <main>
-
+       
     </main>
     <footer id="rodape">
         
     </footer>
-    <script type="module" src="./../../script.js"></script>
+    <script type="module" src="./../../../script.js"></script>
 </body>
 </html>
