--- a/pages/home/index.html
+++ b/pages/home/index.html
@@ -32,22 +32,19 @@
     <nav>
         <ul class="menu">
             <li id="menu-inicio">
-                <a href="#">Início</a>
+                <a href="index.html">Início</a>
             </li>
             <li>
                 <a href="../produtos/index.html">Produtos</a>
                 <ul class="submenu">
                     <li class="submenu-item">
-                        <a href="#">Mousepads</a>
+                        <a href="../produtos/mousepads/index.html">Mousepads</a>
                     </li>
                     <li class="submenu-item">
-                        <a href="#">Teclados</a>
+                        <a href="../produtos/teclados/index.html">Teclados</a>
                     </li>
                     <li class="submenu-item">
-                        <a href="#">Mouses</a>
-                    </li>
-                    <li class="submenu-item">
-                        <a href="#">Fones</a>
+                        <a href="../produtos/mouses/index.html">Mouses</a>
                     </li>
                 </ul>
             </li>
@@ -55,13 +52,13 @@
                 <a href="../acessorios/index.html">Acessórios</a>
                 <ul class="submenu">
                     <li class="submenu-item">
-                        <a href="#">PC</a>
+                        <a href="../acessorios/pc/index.html">PC</a>
                     </li>
                     <li class="submenu-item">
-                        <a href="#">Console</a>
+                        <a href="../acessorios/console/index.html">Console</a>
                     </li>
                     <li class="submenu-item">
-                        <a href="#">Mobile</a>
+                        <a href="../acessorios/mobile/index.html">Mobile</a>
                     </li>
                 </ul>
 
