--- a/pages/home/index.html
+++ b/pages/home/index.html
@@ -80,6 +80,7 @@
     <footer id="rodape">
         
     </footer>
+    <script src="index.js"></script>
     <script type="module" src="./../../script.js"></script>
 </body>
 </html>
